# utilityLCA

./: .coveragerc  AUTHORS.rst  CITATION.cff  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  features.rst  getting_started.rst  index.rst  requirements.txt
src/utilitylca/: __init__.py  bw_link_2_tespy.py  calc_steam_impact.py  interface.py  interface_bwinterface.py  overwrite_tespy.py  skeleton.py  steam_net_interface.py  steam_network_model.py
src/utilitylca/models/dwsim_example/: dwsim_example.ipynb  model.py
src/utilitylca/models/steam_net/: __init__.py  steam_distribution_conventional.py  steam_net_interface.py  steam_network_model.py  steam_network_model_interface.py
tests/: conftest.py  test_skeleton.py
