[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"


[project]
name = "utilityLCA"
authors = [
    {name = "Hannes Schneider", email = "hannes.schneider@tu-braunschweig.de"},
]
description = "Calculate LCI data for heat supply by steam in chemical industry by using SiModIn."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["LCA", "process heat"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.10"',
    "tespy>=0.9.4",
    "simodin",
    "fluprodia",
    "CoolProp",
    "numpy",
]
dynamic = ["version"]

[tool.poetry.dev-dependencies]
sphinx = ">=8.0.0"
sphinx-design 